migration of content

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:               Group Narratives Ltd
-tagline:             'counselling and wellbeing'
-description:         'Group Dynamics in Wellington'
+tagline:             'Wellington and Online'
+description:         'Group Dynamics Consultings'
 url:                 https://narratives.co.nz
 baseurl:             /
 paginate:            5
