--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:               Group Narratives Ltd
 tagline:             'Wellington and Online'
-description:         'Group Dynamics Consultings'
+description:         'Group Dynamics Consulting'
 url:                 https://narratives.co.nz
 baseurl:             /
 paginate:            5
