--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:               Group Narratives Ltd
-tagline:             'Wellington and Online'
-description:         'Group Dynamics Consulting'
+tagline:             'your group stories'
+description:         'Group Dynamics Consulting Wellington and Online'
 url:                 https://narratives.co.nz
 baseurl:             /
 paginate:            5
