--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title:               Group Narratives Ltd
-tagline:             'your group stories'
+title:               Group Dynamics
+tagline:             'Group Narratives Ltd'
 description:         'Group Dynamics Consulting Wellington and Online'
 url:                 https://narratives.co.nz
 baseurl:             /
